--- a/.github/workflows/filetransfer.yml
+++ b/.github/workflows/filetransfer.yml
@@ -10,13 +10,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          path: build
 #      - uses: actions/checkout@v3
 #        with:
 #          repository: machacamoya/ansible-playbook
 #          token: ${{ secrets.MYPAT }}
-#          path: master
+#          path: ansible
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
