--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -2,7 +2,7 @@ name: filetransfer ci/cd
 
 on: 
   push:
-    branches: [kk]
+    branches: [develop]
 
 jobs:
   build:
@@ -62,15 +62,15 @@ jobs:
             codeartifact-repository: ${{ secrets.CODEARTIFACT_REPOSITORY }}
         - name: Build and publish
           run: |
-            export TWINE_USERNAME=aws
-            export TWINE_PASSWORD=`aws codeartifact get-authorization-token --domain my-domain --domain-owner ${{ secrets.AWS_ACCOUNT_ID }} --query authorizationToken --output text`
-            export TWINE_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain my-domain --domain-owner ${{ secrets.AWS_ACCOUNT_ID }} --repository my-private-repo --format pypi --query repositoryEndpoint --output text`
-            python setup.py sdist bdist_wheel
-            twine upload dist/*
-            aws codeartifact get-repository-endpoint --domain my_domain --repository my_repo --format maven
-            curl --request PUT https://my_domain-111122223333.d.codeartifact.us-west-2.amazonaws.com/maven/my_repo/com/mycompany/app/my-app/1.0/my-app-1.0.jar \
-     --user "aws:$CODEARTIFACT_AUTH_TOKEN" --header "Content-Type: application/octet-stream" \
-     --data-binary @my-app-1.0.jar
+            export AWS_USERNAME=aws
+            export AWS_TOKEN=`aws codeartifact get-authorization-token --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --query authorizationToken --output text`
+            export AWS_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} --format maven --query repositoryEndpoint --output text`
+            echo -e "\n\n\t${AWS_TOKEN}\n\n"
+            echo "${AWS_REPOSITORY_URL}\n\n"
+            #aws codeartifact get-repository-endpoint --domain my_domain --repository my_repo --format maven
+            #curl --request PUT https://my_domain-111122223333.d.codeartifact.us-west-2.amazonaws.com/maven/my_repo/com/mycompany/app/my-app/1.0/my-app-1.0.jar \
+     #--user "aws:$CODEARTIFACT_AUTH_TOKEN" --header "Content-Type: application/octet-stream" \
+     #--data-binary @my-app-1.0.jar
           
   Deploy_CERT:
       needs: [CodeArtifact]
