--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -25,7 +25,7 @@ jobs:
           export VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/<version>//' | sed 's/<\/version>//'`
           export ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/<artifactId>//' | sed 's/<\/artifactId>//'`
           export GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/<groupId>//' | sed 's/<\/groupId>//'`
-          export ARTIFACT="${ARTIFACTID}-${VERSIONç.zip"
+          export ARTIFACT="${ARTIFACTID}-${VERSION}.zip"
           mvn -ntp -B clean verify -DskipITs=true
           ls -l target
           echo ${VERSION}
