--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -55,10 +55,13 @@ jobs:
         run: |
           export AWS_TOKEN=`aws codeartifact get-authorization-token --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --query authorizationToken --output text`
           export AWS_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} --format maven --output text` 
-          echo 'curl --request PUT ${AWS_REPOSITORY_URL}/${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} --user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" --data-binary @target/${ARTIFACT}'
-          curl --request PUT ${AWS_REPOSITORY_URL}/${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} \
+          echo -e "\n\n\n\t${AWS_REPOSITORY_URL}/${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT}\n\n"
+          echo -e "\n\n\n\tpcm:${AWS_TOKEN}\n\n"
+          echo -e "\n\n\n\ttarget/${ARTIFACT}\n\n"
+          
+          curl --request PUT "${AWS_REPOSITORY_URL}/${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT}" \
           --user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
-          --data-binary @target/${ARTIFACT}
+          --data-binary "@target/${ARTIFACT}"
       - name: Deploy CERT
         run: |
           echo -e "ESTOY EN DEPLOY CERT\n"
