--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -22,7 +22,15 @@ jobs:
           distribution: 'adopt'
       - name: Build snapshoot
         run: |
+          export VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
+          export ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
+          export GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
+          export ARTIFACT="${ARTIFACTID}-${VERSION}-SNAPSHOT.zip"
+          export NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1, $2, $3+1}’`
           mvn -ntp -B clean verify -DskipITs=true
+          git checkout develop
+          mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
+          git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
       - name: Unit Testing
         run: |
           echo -e "ESTOY EN UNIT TESTING\n"
@@ -38,11 +46,11 @@ jobs:
       - name: Publishing code
         run: |
           echo -e "ESTOY EN CODEARTIFACT\n"
-          ls -Rlt
-          export VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
-          export ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
-          export GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
-          export ARTIFACT="${ARTIFACTID}-${VERSION}-SNAPSHOT.zip"
+          ls -l target/
+          #export VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
+          #export ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
+          #export GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
+          #export ARTIFACT="${ARTIFACTID}-${VERSION}-SNAPSHOT.zip"
 
           echo "------------------------------------------"
           echo ${VERSION}
@@ -61,9 +69,9 @@ jobs:
           echo "------------------------------------------"
           
           
-          curl --request PUT ${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} \
-          --user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
-          --data-binary "@target/${ARTIFACT}"
+          #curl --request PUT ${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} \
+          #--user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
+          #--data-binary "@target/${ARTIFACT}"
 
       - name: Deploy CERT
         run: |
