--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -10,6 +10,8 @@ jobs:
     environment: CERT
     steps:
       - uses: actions/checkout@v3
+        with:
+          persist-credentials: true
 #      - uses: actions/checkout@v3
 #        with:
 #          repository: machacamoya/ansible-playbook
@@ -73,7 +75,7 @@ jobs:
           git config --global user.name "corcobadopedro"
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           cat pom.xml
-          git add -A
+          git add pom.xml
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git push
       #- name: Push changes
