--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          persist-credentials: true
+            token: ${{ secrets.GH_TOKEN }}
 #      - uses: actions/checkout@v3
 #        with:
 #          repository: machacamoya/ansible-playbook
