--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -19,6 +19,9 @@ jobs:
 #          path: ansible
 #          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
 #          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
+      - name: GH 
+        run: |
+           gh auth status
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
