--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -10,13 +10,13 @@ jobs:
     environment: CERT
     steps:
       - uses: actions/checkout@v3
-#        with:
-#            token: ${{ secrets.GH_TOKEN }}
-#      - uses: actions/checkout@v3
-#        with:
-#          repository: machacamoya/ansible-playbook
-#          token: ${{ secrets.MYPAT }}
-#          path: ansible
+        with:
+            token: ${{ secrets.GH_TOKEN }}
+      - uses: actions/checkout@v3
+        with:
+          repository: machacamoya/ansible-playbook
+          token: ${{ secrets.GH_TOKEN }}
+          path: ansible
 #          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
 #          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 #      - name: GH 
