--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -14,14 +14,24 @@ jobs:
             token: ${{ secrets.GH_TOKEN }}
       - uses: actions/checkout@v3
         with:
-          repository: machacamoya/ansible-playbook
+          repository: pcorcobado/ansible-playbook
           token: ${{ secrets.GH_TOKEN }}
           path: ansible
+          ref: 'main'
+      - uses: actions/checkout@v3
+        with:
+          repository: pcorcobado/filetransfer-inventory
+          token: ${{ secrets.GH_TOKEN }}
+          path: inventory
+          ref: 'main'
+
 #          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
 #          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 #      - name: GH 
 #        run: |
 #           gh auth status
+
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -29,6 +39,7 @@ jobs:
           distribution: 'adopt'
       - name: Build snapshoot
         run: |
+          ls -l
           mvn -ntp -B clean verify -DskipITs=true
       - name: Unit Testing
         run: |
