--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -1,53 +1,79 @@
 name: filetransfer ci/cd
 
 on: 
-  push:
-    branches: [kk]
+  release:
+    types: [created]
 
 jobs:
-  build:
+  deploy_cert:
     runs-on: ubuntu-latest
-
+    environment: PRE
     steps:
       - uses: actions/checkout@v3
-#      - uses: actions/checkout@v3
-#        with:
-#          repository: machacamoya/ansible-playbook
-#          token: ${{ secrets.MYPAT }}
-#          path: ansible
+        with:
+            token: ${{ secrets.GH_TOKEN }}
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Build snapshoot
+      - name: Update snapshoot
         run: |
-          pwd
-          ls -ltr
-          mvn -ntp -B clean verify -DskipITs=true
-          pwd
-          ls -ltr
-          type ansible
-          type ansible-playbook
-  Unit_Testing:
-      needs: [build]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Ejecutando comando
-          run: |
-            echo -e "ESTOY EN UNIT TESTING\n"
-  Code_Analysis:
-      needs: [Unit_Testing]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Ejecutando comando
-          run: |
-            echo -e "ESTOY EN CODE ANALYSIS\n"
-  Nexus:
-      needs: [Code_Analysis]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Ejecutando comando
-          run: |
-            echo -e "ESTOY EN NEXUS\n"
-  
+          export VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
+          export NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1+1, $2, 0}'`
+
+          mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
+          
+          git config --global user.email "corcobadopedro@gmail.com"
+          git config --global user.name "corcobadopedro"
+          git add pom.xml
+          git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
+          git push
+          git checkout main
+          git merge --no-ff develop
+      - name: Update release
+        run: |
+          export VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
+          mvn -ntp versions:set -DnewVersion=${VERSION} -DgenerateBackupPoms=false
+          
+          git config --global user.email "corcobadopedro@gmail.com"
+          git config --global user.name "corcobadopedro"
+          git add pom.xml
+          git commit --allow-empty -am "chore: updating for ${VERSION} main [skip ci] with non-snapshot versions"
+          git push
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Publishing RELEASE
+        run: |
+          echo -e "ESTOY EN CODEARTIFACT\n"
+          export VERSION=`grep -m 1 "<version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1-1, $2, $3}'`
+          export ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
+          export GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
+          export ARTIFACT="${ARTIFACTID}-${VERSION}.zip"
+                    
+          echo "------------------------------------------"
+          echo ${VERSION}
+          echo ${ARTIFACTID}
+          echo ${GROUPID}
+          echo ${ARTIFACT}
+          echo ${NEW_VERSION}
+          echo -e "------------------------------------------\n\n\n"
+          
+          #export AWS_TOKEN=`aws codeartifact get-authorization-token --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --query authorizationToken --output text`
+          #export AWS_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} --format maven --output text` 
+          
+          echo "------------------------------------------"
+          #echo -e "\n\n${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT}\n\n"
+          #echo -e "pcm:${AWS_TOKEN}\n\n"
+          #echo -e "target/${ARTIFACT}\n\n"
+          echo "------------------------------------------"
+          
+          
+          #curl --request PUT ${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} \
+          #--user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
+          #--data-binary "@target/${ARTIFACT}"
+    
